--- a/Javascript-Practice/Rally/app/styles/sass/state/_1080.scss
+++ b/Javascript-Practice/Rally/app/styles/sass/state/_1080.scss
@@ -45,7 +45,7 @@
     padding-top: 180px;
     margin: 0 auto;
     max-width: 940px;
-    overflow: visible;
+    // overflow: visible;
   }
   .intro__content,
   .people__content,
